# camara-sdk.py

./: .coveragerc  .flake8  .gitignore  LICENSE  camara.py  cli.py  pyproject.toml  readme.md
.github/: workflows
.github/workflows/: main.yml
camara/: Config.py  Connectivity.py  EndpointConfig.py  Location.py  QualityOnDemand.py  TokenProvider.py  Utils.py  __init__.py  cli.py
src/camara-cli/: __init__.py
test/: __init__.py  test_auth.py
