[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "camara_sdk"
version = "0.0.1"
authors = [
  { name="T Developers", email="developers@telekom.de" },
  { name="Mario Bodemann", email="mario.bodemann@telekom.de" },
]
description = "CAMARA SDK Draft - QoD only"
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dt-developers/camara-sdk.py"
"Bug Tracket" = "https://github.com/dt-developers/camara-sdk.py/issues"
